@@ -955,9 +955,11 @@ Each elements are regexp of field-name.")
 	(goto-char (point-max))
 	(insert "\n")
 	)
-      (if (equal (cdr (assoc "format" situation)) "flowed")
-	  (mime-display-text/plain-flowed
-	   nil (equal (cdr (assoc "delsp" situation)) "yes")))
+      (when (equal (downcase (or (cdr (assoc "format" situation)) ""))
+		   "flowed")
+	(mime-display-text/plain-flowed
+	 nil (equal (downcase (or (cdr (assoc "delsp" situation)) ""))
+		    "yes")))
       (mime-add-url-buttons)
       (run-hooks 'mime-display-text/plain-hook)
       )))
