@@ -1,5 +1,10 @@
 2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* mime-view.el (mime-display-text/plain): Check parameter's value
+	case insensitively.
+
+2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* mime-view.el (mime-preview-fill-flowed-text)
 	(mime-preview-fill-flowed-text-delsp): Abolished.  Internal
 	decoder is always available.
